feat: dockerize app
